--- a/nomad/Vagrantfile
+++ b/nomad/Vagrantfile
@@ -3,10 +3,10 @@
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "../out/vagrant/centos-7.3.virtualbox.box"
+  config.vm.box = "../out/nomad/centos-7.3.virtualbox.box"
 
   config.vm.provider "virtualbox" do |vb|
-      vb.name = "centos-7.3"
+      vb.name = "nomad"
   end
 
 end
