--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,7 +3,7 @@
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "../out/vagrant/centos-7.3.box"
+  config.vm.box = "../out/vagrant/centos-7.3.virtualbox.box"
 
   config.vm.provider "virtualbox" do |vb|
       vb.name = "centos-7.3"
