--- a/nomad/files/nomad.service
+++ b/nomad/files/nomad.service
@@ -1,9 +1,12 @@
 [Unit]
 Description=nomad
 Documentation=https://nomadproject.io/docs/
+Requires=network-online.target
+After=network-online.target
 
 [Service]
 ExecStart=/usr/bin/nomad agent -config /etc/nomad/nomad.conf
+ExecReload=/bin/kill -HUP $MAINPID
 KillSignal=SIGTERM
 
 [Install]
